# srg-fit

./: .editorconfig  .git_commit_msg.tmp  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SRG_Fit_Roadmap_v7.docx  SRG_Fit_Roadmap_v7.md  bucket_files.txt  exercise_names.txt  knip_output.txt  lint_output.txt  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
.git-hooks/: pre-commit
.tmp/: generate_home_screen_guide.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
public/: manifest.json  sw.js
scripts/: activity_hits.txt  add_consistency_goal_update.py  add_consistency_goal_update2.py  add_gif_render.py  add_giphy_import.py  add_suggest_goal.py  add_suggest_goal_ui.py  add_swap_search.py  alpha-sweep.py  check-encoding.py  check_insight_tables.py  clean_invite_modal.py  exercise-matched.json  exercise-no-match.json  find_activity_card.py  find_nutrition_snapshot.py  fix-bad-import.py  fix-l2533.py  fix-three-files.py  fix_activity_card.py  fix_add_exercise_newlines.py  fix_bf_hidden.py  fix_bf_hidden2.py  fix_bool_cast.py  fix_bool_final.py  fix_bool_v2.py  fix_bool_v3.py  fix_cors.py  fix_cors2.py  fix_date_drift.py  fix_gif_jsx.py  fix_gif_jsx2.py  fix_gif_order.py  fix_goals.py  fix_metrics_toggle.py  fix_metrics_ts.py  fix_modal_scope.py  fix_open_slot_jsx.py  fix_progress_image.py  fix_resend_button.py  (+33 more)
(+159 files in other folders)
