[package]
name = "srg-fit-coach"
version = "0.1.0"
description = "SRG Fit Coach attention inbox — desktop window for the coach dashboard."
authors = ["Shane Hoopes"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "srg_fit_coach_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
